sass-loader & sass

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -4,6 +4,7 @@ block locals
   - var title = 'Hello';
 
 block content
-  h1 Hello World
+  h1 Hello Pug!
+  p テーブル
   img(src="../images/icon.jpg")
   img(src="../images/thumbnail.jpg")
