--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,6 +5,7 @@ block locals
 
 block content
   h1 Hello Pug!
+  div#vue-root
   p テーブル
   img(src="../images/icon.jpg")
   img(src="../images/thumbnail.jpg")
